--- a/ClientApp/book-manager/src/app/components/navbar/navbar.component.html
+++ b/ClientApp/book-manager/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <div class="spacer"></div>
 
   <a mat-button routerLink="home">Home</a>
-  <a mat-button routerLink="category">Categoria</a>
+  <a mat-button routerLink="createcategory">Crear Categoria</a>
   <a mat-button routerLink="author">Autores</a>
   <a mat-button routerLink="book">Libros</a>
   <!-- <a mat-raised-button color="accent" routerLink="signup">Sign Up</a> -->
