crea y edita libros, queda faltando buscador

--- a/ClientApp/book-manager/src/app/components/navbar/navbar.component.html
+++ b/ClientApp/book-manager/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,8 @@
 
   <a mat-button routerLink="home">Home</a>
   <a mat-button routerLink="createcategory">Crear Categoria</a>
-  <a mat-button routerLink="author">Autores</a>
+  <a mat-button routerLink="author/create">Crear Autores</a>
+  <a mat-button routerLink="author/index">Lista de Autores</a>
   <a mat-button routerLink="book">Libros</a>
   <!-- <a mat-raised-button color="accent" routerLink="signup">Sign Up</a> -->
 </mat-toolbar>
