--- a/ClientApp/book-manager/src/app/views/book/edit/edit.component.html
+++ b/ClientApp/book-manager/src/app/views/book/edit/edit.component.html
@@ -13,7 +13,7 @@
         placeholder="Elige un autor"
         aria-label="Number"
         matInput
-        [formControl]="myControl"
+        [formControl]="autoComplete"
         [matAutocomplete]="auto"
       />
       <mat-autocomplete
