--- a/ClientApp/book-manager/src/app/views/author/edit/edit.component.html
+++ b/ClientApp/book-manager/src/app/views/author/edit/edit.component.html
@@ -1,7 +1,7 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 
 <form class="container" *ngIf="!isLoading">
-  <h1>Crear Autor</h1>
+  <h1>Editar Autor</h1>
   <div class="form-group">
     <mat-form-field appearance="fill">
       <mat-label>Nombres</mat-label>
