--- a/ClientApp/book-manager/src/app/views/book/create/create.component.html
+++ b/ClientApp/book-manager/src/app/views/book/create/create.component.html
@@ -10,7 +10,7 @@
     <mat-form-field>
       <input
         type="text"
-        placeholder="Pick one"
+        placeholder="Elegir autor"
         aria-label="Number"
         matInput
         [formControl]="myControl"
